# project-sekai-thumbnail-matcher

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: static.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: hasher.rs  lib.rs
public/: character_hashes.json
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/lib/: Cargo.toml
rust/lib/src/: extractor.rs  hasher.rs  lib.rs  utils.rs  wasm.rs
rust/src/: hasher.rs
src/: App.tsx  CanvasHost.tsx  ThumbnailMatchTable.tsx  index.tsx  utils.ts
web/: Cargo.toml  index.html
web/src/: main.rs
