[package]
name = "pjsekai_thumbnail_matcher_cli"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pjsekai_thumbnail_matcher = { path = "../lib" }

anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
image = "0.24"
