[package]
name = "pjsekai_thumbnail_matcher_cli"
description = "CLI for matching Project Sekai card thumbnails."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
pjsekai_thumbnail_matcher = { path = "../lib" }

anyhow.workspace = true
clap.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
