[package]
name = "pjsekai_thumbnail_matcher"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.24", default-features = false }
imageproc = "0.23"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["ImageData"] }
