[package]
name = "pjsekai_thumbnail_matcher"
description = "Library for matching Project Sekai card thumbnails."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image.workspace = true
imageproc.workspace = true
ndarray.workspace = true
ndrustfft.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
